coding day 1 - added new files

--- a/public/styles.css
+++ b/public/styles.css
@@ -12,9 +12,9 @@
   }
   
   header {
-    background-color: #f5ba13;
+    background-color: #13b1f5e5;
     margin: auto -16px;
-    padding: 16px 32px;
+    padding: 8px 16px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
   }
   
