--- a/public/styles.css
+++ b/public/styles.css
@@ -50,10 +50,10 @@
     margin-bottom: 10px;
     font-weight: 400;
     text-align: center;
-
+    background-color: rgb(227, 237, 237);
   }
   .note p {
-    font-size: 1.1em;
+    font-size: 1em;
     margin-bottom: 10px;
     white-space: pre-wrap;
     word-wrap: break-word;
